commit translated contents

--- a/docs/docs-ref-autogen/excel.yml
+++ b/docs/docs-ref-autogen/excel.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2de6b577cf24fc72b2e086cb280464e056324494
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 6fee095f6bc926b2a60e552b6ec73a47aa277337
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098591"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303219"
 items:
 - uid: excel
   name: excel
@@ -15,6 +15,9 @@ items:
   children:
   - excel.Excel.AggregationFunction
   - excel.Excel.Application
+  - excel.Excel.ArrowHeadLength
+  - excel.Excel.ArrowHeadStyle
+  - excel.Excel.ArrowHeadWidth
   - excel.Excel.AutoFillType
   - excel.Excel.AutoFilter
   - excel.Excel.BasicDataValidation
@@ -43,6 +46,7 @@ items:
   - excel.Excel.CellPropertiesLoadOptions
   - excel.Excel.CellPropertiesProtection
   - excel.Excel.CellValueConditionalFormat
+  - excel.Excel.ChangedEventDetail
   - excel.Excel.Chart
   - excel.Excel.ChartActivatedEventArgs
   - excel.Excel.ChartAddedEventArgs
@@ -725,6 +729,7 @@ items:
   - excel.Excel.RemoveDuplicatesResult
   - excel.Excel.ReplaceCriteria
   - excel.Excel.RequestContext
+  - excel.Excel.RibbonTab
   - excel.Excel.RowColumnPivotHierarchy
   - excel.Excel.RowColumnPivotHierarchyCollection
   - excel.Excel.RowProperties
@@ -1023,6 +1028,12 @@ references:
   name: Excel.AggregationFunction
 - uid: excel.Excel.Application
   name: Excel.Application
+- uid: excel.Excel.ArrowHeadLength
+  name: Excel.ArrowHeadLength
+- uid: excel.Excel.ArrowHeadStyle
+  name: Excel.ArrowHeadStyle
+- uid: excel.Excel.ArrowHeadWidth
+  name: Excel.ArrowHeadWidth
 - uid: excel.Excel.AutoFillType
   name: Excel.AutoFillType
 - uid: excel.Excel.AutoFilter
@@ -1079,6 +1090,8 @@ references:
   name: Excel.CellPropertiesProtection
 - uid: excel.Excel.CellValueConditionalFormat
   name: Excel.CellValueConditionalFormat
+- uid: excel.Excel.ChangedEventDetail
+  name: Excel.ChangedEventDetail
 - uid: excel.Excel.Chart
   name: Excel.Chart
 - uid: excel.Excel.ChartActivatedEventArgs
@@ -2437,6 +2450,8 @@ references:
   name: Excel.ReplaceCriteria
 - uid: excel.Excel.RequestContext
   name: Excel.RequestContext
+- uid: excel.Excel.RibbonTab
+  name: Excel.RibbonTab
 - uid: excel.Excel.RowColumnPivotHierarchy
   name: Excel.RowColumnPivotHierarchy
 - uid: excel.Excel.RowColumnPivotHierarchyCollection
