--- a/docs/docs-ref-autogen/excel/excel.eventtype.yml
+++ b/docs/docs-ref-autogen/excel/excel.eventtype.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bad93c794e1098dc1e3045aa9526dc1cbcb8a39b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ecb91548c35d7a1ff6f4351fb51bd98342bfd7b9
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30093103"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303205"
 items:
 - uid: excel.Excel.EventType
   summary: '\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
@@ -20,6 +20,7 @@ items:
   - excel.Excel.EventType.chartAdded
   - excel.Excel.EventType.chartDeactivated
   - excel.Excel.EventType.chartDeleted
+  - excel.Excel.EventType.ribbonCommandExecuted
   - excel.Excel.EventType.shapeActivated
   - excel.Excel.EventType.shapeDeactivated
   - excel.Excel.EventType.tableAdded
@@ -80,6 +81,14 @@ items:
   - typeScript
   type: field
   numericValue: "\"ChartDeleted\""
+- uid: excel.Excel.EventType.ribbonCommandExecuted
+  summary: RibbonCommandExecuted 表示在功能区上注册的事件的类型, 当用户单击功能区时发生
+  name: ribbonCommandExecuted
+  fullName: ribbonCommandExecuted
+  langs:
+  - typeScript
+  type: field
+  numericValue: "\"RibbonCommandExecuted\""
 - uid: excel.Excel.EventType.shapeActivated
   summary: ShapeActivated 表示在形状上注册的事件的类型, 并在形状激活时发生。
   name: shapeActivated
