--- a/docs/docs-ref-autogen/excel/excel.interfaces.linedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.linedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f13481c424ed9d3de441cbcf315e691e92fe4ed0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a27a7848b3bc7652933445f8c32da9a40c84453b
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116960"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303009"
 items:
 - uid: excel.Excel.Interfaces.LineData
   summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
@@ -15,8 +15,86 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.LineData.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineData.beginArrowHeadStyle
+  - excel.Excel.Interfaces.LineData.beginArrowHeadWidth
+  - excel.Excel.Interfaces.LineData.beginConnectedSite
   - excel.Excel.Interfaces.LineData.connectorType
+  - excel.Excel.Interfaces.LineData.endArrowHeadLength
+  - excel.Excel.Interfaces.LineData.endArrowHeadStyle
+  - excel.Excel.Interfaces.LineData.endArrowHeadWidth
+  - excel.Excel.Interfaces.LineData.endConnectedSite
   - excel.Excel.Interfaces.LineData.id
+  - excel.Excel.Interfaces.LineData.isBeginConnected
+  - excel.Excel.Interfaces.LineData.isEndConnected
+- uid: excel.Excel.Interfaces.LineData.beginArrowHeadLength
+  summary: >-
+    表示指定线条开头的箭头的长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineData.beginArrowHeadStyle
+  summary: >-
+    表示指定线条开头的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineData.beginArrowHeadWidth
+  summary: >-
+    表示指定线条的起点的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+- uid: excel.Excel.Interfaces.LineData.beginConnectedSite
+  summary: >-
+    表示一个整数, 该整数指定连接符的起点所连接到的连接站点。 只读。 如果行的开头未附加到任何形状, 则返回 null。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginConnectedSite
+  fullName: beginConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginConnectedSite?: number;'
+    return:
+      type:
+      - number
 - uid: excel.Excel.Interfaces.LineData.connectorType
   summary: >-
     表示线条的连接线类型。
@@ -34,6 +112,74 @@ items:
     return:
       type:
       - Excel.ConnectorType | "Straight" | "Elbow" | "Curve"
+- uid: excel.Excel.Interfaces.LineData.endArrowHeadLength
+  summary: >-
+    表示指定线条末端的箭头长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineData.endArrowHeadStyle
+  summary: >-
+    表示指定线条末端的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineData.endArrowHeadWidth
+  summary: >-
+    表示指定线条末端的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+- uid: excel.Excel.Interfaces.LineData.endConnectedSite
+  summary: >-
+    表示一个整数, 该整数指定连接符的终点所连接到的连接站点。 只读。 如果行的末尾未附加到任何形状, 则返回 null。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endConnectedSite
+  fullName: endConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endConnectedSite?: number;'
+    return:
+      type:
+      - number
 - uid: excel.Excel.Interfaces.LineData.id
   summary: >-
     代表形状标识符。 只读。
@@ -51,3 +197,37 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.LineData.isBeginConnected
+  summary: >-
+    表示指定的行的开头是否连接到形状。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: isBeginConnected
+  fullName: isBeginConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isBeginConnected?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineData.isEndConnected
+  summary: >-
+    表示指定线条的终点是否连接到形状。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: isEndConnected
+  fullName: isEndConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isEndConnected?: boolean;'
+    return:
+      type:
+      - boolean
