--- a/docs/docs-ref-autogen/excel/excel.interfaces.lineloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.lineloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3a6083559f5ddc338640dbdcbc188fdb5a968472
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 7ecee767a1dfdc9ec4bcd13b4ea668627a58275f
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108168"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303100"
 items:
 - uid: excel.Excel.Interfaces.LineLoadOptions
   summary: >-
@@ -21,8 +21,20 @@ items:
   package: excel
   children:
   - excel.Excel.Interfaces.LineLoadOptions.$all
+  - excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadStyle
+  - excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadWidth
+  - excel.Excel.Interfaces.LineLoadOptions.beginConnectedShape
+  - excel.Excel.Interfaces.LineLoadOptions.beginConnectedSite
   - excel.Excel.Interfaces.LineLoadOptions.connectorType
+  - excel.Excel.Interfaces.LineLoadOptions.endArrowHeadLength
+  - excel.Excel.Interfaces.LineLoadOptions.endArrowHeadStyle
+  - excel.Excel.Interfaces.LineLoadOptions.endArrowHeadWidth
+  - excel.Excel.Interfaces.LineLoadOptions.endConnectedShape
+  - excel.Excel.Interfaces.LineLoadOptions.endConnectedSite
   - excel.Excel.Interfaces.LineLoadOptions.id
+  - excel.Excel.Interfaces.LineLoadOptions.isBeginConnected
+  - excel.Excel.Interfaces.LineLoadOptions.isEndConnected
   - excel.Excel.Interfaces.LineLoadOptions.shape
 - uid: excel.Excel.Interfaces.LineLoadOptions.$all
   isPreview: true
@@ -33,6 +45,91 @@ items:
   type: property
   syntax:
     content: '$all?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadLength
+  summary: >-
+    表示指定线条开头的箭头的长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadStyle
+  summary: >-
+    表示指定线条开头的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginArrowHeadWidth
+  summary: >-
+    表示指定线条的起点的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginConnectedShape
+  summary: >-
+    表示指定的行的起点所附加到的 shape 对象。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginConnectedShape
+  fullName: beginConnectedShape
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginConnectedShape?: Excel.Interfaces.ShapeLoadOptions;'
+    return:
+      type:
+      - excel.Excel.Interfaces.ShapeLoadOptions
+- uid: excel.Excel.Interfaces.LineLoadOptions.beginConnectedSite
+  summary: >-
+    表示一个整数, 该整数指定连接符的起点所连接到的连接站点。 只读。 如果行的开头未附加到任何形状, 则返回 null。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginConnectedSite
+  fullName: beginConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginConnectedSite?: boolean;'
     return:
       type:
       - boolean
@@ -53,6 +150,91 @@ items:
     return:
       type:
       - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endArrowHeadLength
+  summary: >-
+    表示指定线条末端的箭头长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endArrowHeadStyle
+  summary: >-
+    表示指定线条末端的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endArrowHeadWidth
+  summary: >-
+    表示指定线条末端的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.endConnectedShape
+  summary: >-
+    代表指定行的终点所附加到的 shape 对象。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endConnectedShape
+  fullName: endConnectedShape
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endConnectedShape?: Excel.Interfaces.ShapeLoadOptions;'
+    return:
+      type:
+      - excel.Excel.Interfaces.ShapeLoadOptions
+- uid: excel.Excel.Interfaces.LineLoadOptions.endConnectedSite
+  summary: >-
+    表示一个整数, 该整数指定连接符的终点所连接到的连接站点。 只读。 如果行的末尾未附加到任何形状, 则返回 null。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endConnectedSite
+  fullName: endConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endConnectedSite?: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Interfaces.LineLoadOptions.id
   summary: >-
     代表形状标识符。 只读。
@@ -67,6 +249,40 @@ items:
   type: property
   syntax:
     content: 'id?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.isBeginConnected
+  summary: >-
+    表示指定的行的开头是否连接到形状。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: isBeginConnected
+  fullName: isBeginConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isBeginConnected?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.LineLoadOptions.isEndConnected
+  summary: >-
+    表示指定线条的终点是否连接到形状。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: isEndConnected
+  fullName: isEndConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'isEndConnected?: boolean;'
     return:
       type:
       - boolean
