--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapecollectionloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1ece91ad26a2ef5e3a7c2f220aeb6c47535f4584
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 100a600eaf1f884d8cade27f78610aea5dec34c8
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117268"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303163"
 items:
 - uid: excel.Excel.Interfaces.ShapeCollectionLoadOptions
   summary: >-
@@ -23,6 +23,7 @@ items:
   - excel.Excel.Interfaces.ShapeCollectionLoadOptions.$all
   - excel.Excel.Interfaces.ShapeCollectionLoadOptions.altTextDescription
   - excel.Excel.Interfaces.ShapeCollectionLoadOptions.altTextTitle
+  - excel.Excel.Interfaces.ShapeCollectionLoadOptions.connectionSiteCount
   - excel.Excel.Interfaces.ShapeCollectionLoadOptions.fill
   - excel.Excel.Interfaces.ShapeCollectionLoadOptions.geometricShape
   - excel.Excel.Interfaces.ShapeCollectionLoadOptions.geometricShapeType
@@ -88,6 +89,23 @@ items:
   type: property
   syntax:
     content: 'altTextTitle?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.ShapeCollectionLoadOptions.connectionSiteCount
+  summary: >-
+    对于集合中的每一项: 返回指定形状上的连接结点的数目。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: connectionSiteCount
+  fullName: connectionSiteCount
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'connectionSiteCount?: boolean;'
     return:
       type:
       - boolean
