--- a/docs/docs-ref-autogen/excel/excel.interfaces.shapedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.shapedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1ad63f65913c9e74249541ab08e5032116aa1d0e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: d4430982ba90c6d67bb01b3b108f6bf4a214052d
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114006"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303093"
 items:
 - uid: excel.Excel.Interfaces.ShapeData
   summary: 描述通过调用 "toJSON ()" 返回的数据的接口。
@@ -17,6 +17,7 @@ items:
   children:
   - excel.Excel.Interfaces.ShapeData.altTextDescription
   - excel.Excel.Interfaces.ShapeData.altTextTitle
+  - excel.Excel.Interfaces.ShapeData.connectionSiteCount
   - excel.Excel.Interfaces.ShapeData.fill
   - excel.Excel.Interfaces.ShapeData.geometricShapeType
   - excel.Excel.Interfaces.ShapeData.height
@@ -67,6 +68,23 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Interfaces.ShapeData.connectionSiteCount
+  summary: >-
+    返回指定形状中的连结点的数量。只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: connectionSiteCount
+  fullName: connectionSiteCount
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'connectionSiteCount?: number;'
+    return:
+      type:
+      - number
 - uid: excel.Excel.Interfaces.ShapeData.fill
   summary: >-
     返回 shape 对象的填充格式。 只读。
