--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicercollectionloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 792766b29fd1996559a6ab012319588def1f437c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 5b9e3aaef5c75d00428ec6851d2fa0145cb486e1
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116757"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30302946"
 items:
 - uid: excel.Excel.Interfaces.SlicerCollectionLoadOptions
   summary: >-
@@ -166,7 +166,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerCollectionLoadOptions.sortBy
   summary: >-
-    对于集合中的每一项: 表示切片器中项目的排序顺序。
+    对于集合中的每一项: 表示切片器中项目的排序顺序。 可能的值包括: DataSourceOrder、升序、降序。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -200,7 +200,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerCollectionLoadOptions.top
   summary: >-
-    对于集合中的每一项: 表示从工作表右侧切片器的上边缘的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    对于集合中的每一项: 表示从切片器的上边缘到工作表顶部的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
