--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5f92c28ff5760b19c13476001396935d07683168
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: fb5d8d8a8901f19ba8a2bab89830159b8ef479a6
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113873"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303072"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions
   summary: >-
@@ -56,7 +56,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemCollectionLoadOptions.isSelected
   summary: >-
-    对于集合中的每一项: 如果选择了切片器项, 则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。
+    对于集合中的每一项: 如果选择了切片器项, 则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。 默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
