--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemdata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7319b5ef096ae50c778a16a6e1e4c7af65d8cd52
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 47996ad4ba808909b8282a26ec4e4b5d9ecaeee6
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117436"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303016"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemData
   summary: 描述通过调用 "slicerItem ()" 返回的数据的接口。
@@ -38,7 +38,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerItemData.isSelected
   summary: >-
-    如果选择了切片器项, 则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。
+    如果选择了切片器项, 则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。 默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
