--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b7a7973f0fa3af9de400ef995e7495c7c5dea171
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 32b9143ff33c48f1a79bb53da01cf2b2fb65dbbf
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111864"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303135"
 items:
 - uid: excel.Excel.Interfaces.SlicerLoadOptions
   summary: >-
@@ -166,7 +166,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.sortBy
   summary: >-
-    代表切片器中项目的排序顺序。
+    代表切片器中项目的排序顺序。 可能的值包括: DataSourceOrder、升序、降序。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -200,7 +200,7 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.SlicerLoadOptions.top
   summary: >-
-    表示从工作表右侧切片器的上边缘的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    表示从切片器的上边缘到工作表顶部的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
