--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0a7419efcbd4e66daf5a7106bd8d29ebce70911a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: f4072a38aba437932e9545e3c4ac53075a9a7278
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111276"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303051"
 items:
 - uid: excel.Excel.Interfaces.SlicerUpdateData
   summary: 一个用于更新切片器对象上的数据的接口, 用于在 "切片器"<!-- -->中使用。 set ({...}<!-- -->)".
@@ -112,7 +112,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerUpdateData.sortBy
   summary: >-
-    代表切片器中项目的排序顺序。
+    代表切片器中项目的排序顺序。 可能的值包括: DataSourceOrder、升序、降序。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -146,7 +146,7 @@ items:
       - string
 - uid: excel.Excel.Interfaces.SlicerUpdateData.top
   summary: >-
-    表示从工作表右侧切片器的上边缘的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
+    表示从切片器的上边缘到工作表顶部的距离 (以磅为单位)。 当设置为负值作为输入时引发无效参数异常。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
