--- a/docs/docs-ref-autogen/excel/excel.interfaces.textframeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.textframeloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 699ba76c1dbd087374c0c7aa5b8e8ab7687c0c1e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 824bda17820771c092101f3f5d288131ac378357
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116169"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303142"
 items:
 - uid: excel.Excel.Interfaces.TextFrameLoadOptions
   summary: >-
@@ -200,6 +200,11 @@ items:
       type:
       - boolean
 - uid: excel.Excel.Interfaces.TextFrameLoadOptions.textRange
+  summary: >-
+    代表文本框架中的文本范围。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
   name: textRange
   fullName: textRange
