--- a/docs/docs-ref-autogen/excel/excel.line.yml
+++ b/docs/docs-ref-autogen/excel/excel.line.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8c6e9832246998d6d61bd12fa8389f3c7567876b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: ba72f429cfcc305bf8df693d649a91d27e49a41e
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106446"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30302960"
 items:
 - uid: excel.Excel.Line
   summary: >-
@@ -22,9 +22,25 @@ items:
   - office.OfficeExtension.ClientObject
   package: excel
   children:
+  - excel.Excel.Line.beginArrowHeadLength
+  - excel.Excel.Line.beginArrowHeadStyle
+  - excel.Excel.Line.beginArrowHeadWidth
+  - excel.Excel.Line.beginConnect
+  - excel.Excel.Line.beginConnectedShape
+  - excel.Excel.Line.beginConnectedSite
+  - excel.Excel.Line.beginDisconnect
   - excel.Excel.Line.connectorType
   - excel.Excel.Line.context
+  - excel.Excel.Line.endArrowHeadLength
+  - excel.Excel.Line.endArrowHeadStyle
+  - excel.Excel.Line.endArrowHeadWidth
+  - excel.Excel.Line.endConnect
+  - excel.Excel.Line.endConnectedShape
+  - excel.Excel.Line.endConnectedSite
+  - excel.Excel.Line.endDisconnect
   - excel.Excel.Line.id
+  - excel.Excel.Line.isBeginConnected
+  - excel.Excel.Line.isEndConnected
   - excel.Excel.Line.load
   - excel.Excel.Line.load_1
   - excel.Excel.Line.load_2
@@ -32,6 +48,136 @@ items:
   - excel.Excel.Line.set_1
   - excel.Excel.Line.shape
   - excel.Excel.Line.toJSON
+- uid: excel.Excel.Line.beginArrowHeadLength
+  summary: >-
+    表示指定线条开头的箭头的长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Line.beginArrowHeadStyle
+  summary: >-
+    表示指定线条开头的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Line.beginArrowHeadWidth
+  summary: >-
+    表示指定线条的起点的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+- uid: excel.Excel.Line.beginConnect
+  summary: >-
+    将指定的连接符的起点连接到指定的形状上。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginConnect(shape, connectionSite)
+  fullName: beginConnect(shape, connectionSite)
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'beginConnect(shape: Excel.Shape, connectionSite: number): void;'
+    return:
+      type:
+      - void
+      description: ''
+    parameters:
+    - id: shape
+      description: 要连接到连接符起点的形状。
+      type:
+      - excel.Excel.Shape
+    - id: connectionSite
+      description: 连接符的起点连接到的形状上的连接点。 必须为介于0和指定形状的连接网站计数 (不包括) 之间的整数。
+      type:
+      - number
+- uid: excel.Excel.Line.beginConnectedShape
+  summary: >-
+    表示指定的行的起点所附加到的 shape 对象。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginConnectedShape
+  fullName: beginConnectedShape
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly beginConnectedShape: Excel.Shape;'
+    return:
+      type:
+      - excel.Excel.Shape
+- uid: excel.Excel.Line.beginConnectedSite
+  summary: >-
+    表示一个整数, 该整数指定连接符的起点所连接到的连接站点。 只读。 如果行的开头未附加到任何形状, 则返回 null。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginConnectedSite
+  fullName: beginConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly beginConnectedSite: number;'
+    return:
+      type:
+      - number
+- uid: excel.Excel.Line.beginDisconnect
+  summary: >-
+    断开指定连接符的起点与其连接的形状之间的连接。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginDisconnect()
+  fullName: beginDisconnect()
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'beginDisconnect(): void;'
+    return:
+      type:
+      - void
+      description: ''
 - uid: excel.Excel.Line.connectorType
   summary: >-
     表示线条的连接线类型。
@@ -62,6 +208,136 @@ items:
     return:
       type:
       - RequestContext
+- uid: excel.Excel.Line.endArrowHeadLength
+  summary: >-
+    表示指定线条末端的箭头长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Line.endArrowHeadStyle
+  summary: >-
+    表示指定线条末端的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Line.endArrowHeadWidth
+  summary: >-
+    表示指定线条末端的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
+- uid: excel.Excel.Line.endConnect
+  summary: >-
+    将指定的连接符的终点连接到指定的形状上。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endConnect(shape, connectionSite)
+  fullName: endConnect(shape, connectionSite)
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'endConnect(shape: Excel.Shape, connectionSite: number): void;'
+    return:
+      type:
+      - void
+      description: ''
+    parameters:
+    - id: shape
+      description: 要连接到连接符的终点的形状。
+      type:
+      - excel.Excel.Shape
+    - id: connectionSite
+      description: 连接符的终点所连接的形状上的连接点。 必须为介于0和指定形状的连接网站计数 (不包括) 之间的整数。
+      type:
+      - number
+- uid: excel.Excel.Line.endConnectedShape
+  summary: >-
+    代表指定行的终点所附加到的 shape 对象。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endConnectedShape
+  fullName: endConnectedShape
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly endConnectedShape: Excel.Shape;'
+    return:
+      type:
+      - excel.Excel.Shape
+- uid: excel.Excel.Line.endConnectedSite
+  summary: >-
+    表示一个整数, 该整数指定连接符的终点所连接到的连接站点。 只读。 如果行的末尾未附加到任何形状, 则返回 null。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endConnectedSite
+  fullName: endConnectedSite
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly endConnectedSite: number;'
+    return:
+      type:
+      - number
+- uid: excel.Excel.Line.endDisconnect
+  summary: >-
+    断开指定连接符的终点与其连接的形状之间的连接。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endDisconnect()
+  fullName: endDisconnect()
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'endDisconnect(): void;'
+    return:
+      type:
+      - void
+      description: ''
 - uid: excel.Excel.Line.id
   summary: >-
     代表形状标识符。 只读。
@@ -79,6 +355,40 @@ items:
     return:
       type:
       - string
+- uid: excel.Excel.Line.isBeginConnected
+  summary: >-
+    表示指定的行的开头是否连接到形状。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: isBeginConnected
+  fullName: isBeginConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly isBeginConnected: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Line.isEndConnected
+  summary: >-
+    表示指定线条的终点是否连接到形状。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: isEndConnected
+  fullName: isEndConnected
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly isEndConnected: boolean;'
+    return:
+      type:
+      - boolean
 - uid: excel.Excel.Line.load
   summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
   remarks: >-
