--- a/docs/docs-ref-autogen/excel/excel.pagebreakcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.pagebreakcollection.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0f83db26da786d2d588cc8c6d93ee4ae4b1b13bf
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 0a959631640c698f70c4d3206191246b64a32d6a
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109134"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303023"
 items:
 - uid: excel.Excel.PageBreakCollection
   summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
@@ -45,7 +45,7 @@ items:
     return:
       type:
       - excel.Excel.PageBreak
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const farmSheet = context.workbook.worksheets.getItem(\"Print\");\n    farmSheet.horizontalPageBreaks.add(\"A21:E21\");\n    await context.sync();\n});\n```"
     parameters:
     - id: pageBreakRange
       description: 紧跟在要添加的分页符之后的区域。
