--- a/docs/docs-ref-autogen/excel/excel.pagelayout.yml
+++ b/docs/docs-ref-autogen/excel/excel.pagelayout.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 50cb1fefba0763abc7361c76ecbca091143abbd9
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: b8bf84a27ae43ce575a06fed3bbaa04a4aa60104
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106733"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303226"
 items:
 - uid: excel.Excel.PageLayout
   summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
@@ -107,6 +107,7 @@ items:
     return:
       type:
       - boolean
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const farmSheet = context.workbook.worksheets.getItem(\"Print\");\n    farmSheet.pageLayout.centerHorizontally = true;\n    farmSheet.pageLayout.centerVertically = true;\n    await context.sync();\n});\n```"
 - uid: excel.Excel.PageLayout.centerVertically
   summary: >-
     获取或设置工作表的垂直标记。 此标志确定工作表在打印时是否垂直居中。
@@ -124,6 +125,7 @@ items:
     return:
       type:
       - boolean
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const farmSheet = context.workbook.worksheets.getItem(\"Print\");\n    farmSheet.pageLayout.centerHorizontally = true;\n    farmSheet.pageLayout.centerVertically = true;\n    await context.sync();\n});\n```"
 - uid: excel.Excel.PageLayout.context
   summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
   isPreview: true
@@ -432,6 +434,7 @@ items:
     return:
       type:
       - Excel.PageOrientation | "Portrait" | "Landscape"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const farmSheet = context.workbook.worksheets.getItem(\"Print\");\n    farmSheet.pageLayout.orientation = Excel.PageOrientation.landscape;\n    await context.sync();\n});\n```"
 - uid: excel.Excel.PageLayout.paperSize
   summary: >-
     获取或设置页面的工作表的纸张大小。
@@ -615,7 +618,7 @@ items:
     return:
       type:
       - void
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const farmSheet = context.workbook.worksheets.getItem(\"Print\");\n    farmSheet.pageLayout.setPrintArea(\"A1:D41\");\n    await context.sync();\n});\n```"
     parameters:
     - id: printArea
       description: 要打印的内容的范围或 RangeAreas。
@@ -715,7 +718,7 @@ items:
     return:
       type:
       - void
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const farmSheet = context.workbook.worksheets.getItem(\"Print\");\n    farmSheet.pageLayout.setPrintTitleRows(\"$1:$1\");\n    await context.sync();\n});\n```"
     parameters:
     - id: printTitleRows
       description: 要在每个页面顶部重复的行, 范围必须跨整个行才能有效。
