--- a/docs/docs-ref-autogen/excel/excel.shapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapecollection.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 18213c39327080d161c7b1f580ac007b01032479
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 3630dc7efda4c42a686053df79b7fc81da9949ab
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109792"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303156"
 items:
 - uid: excel.Excel.ShapeCollection
   summary: >-
@@ -46,38 +46,22 @@ items:
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: addGeometricShape(geometricShapeType, left, top, width, height)
-  fullName: addGeometricShape(geometricShapeType, left, top, width, height)
+  name: addGeometricShape(geometricShapeType)
+  fullName: addGeometricShape(geometricShapeType)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'addGeometricShape(geometricShapeType: Excel.GeometricShapeType, left: number, top: number, width: number, height: number): Excel.Shape;'
+    content: 'addGeometricShape(geometricShapeType: Excel.GeometricShapeType): Excel.Shape;'
     return:
       type:
       - excel.Excel.Shape
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n    const shape = sheet.shapes.addGeometricShape(Excel.GeometricShapeType.hexagon);\n    shape.left = 5;\n    shape.top = 5;\n    shape.height = 175;\n    shape.width = 200;\n    await context.sync();\n});\n```"
     parameters:
     - id: geometricShapeType
       description: 表示形状的几何类型。 有关详细信息, 请参阅 GeometricShapeType。
       type:
       - excel.Excel.GeometricShapeType
-    - id: left
-      description: 从形状左侧到工作表左侧的距离 (以磅为单位)。
-      type:
-      - number
-    - id: top
-      description: 从形状的上边缘到工作表的顶端之间的距离 (以磅为单位)。
-      type:
-      - number
-    - id: width
-      description: 形状的宽度 (以磅为单位)。
-      type:
-      - number
-    - id: height
-      description: 形状的高度 (以磅为单位)。
-      type:
-      - number
 - uid: excel.Excel.ShapeCollection.addGeometricShape_1
   summary: >-
     向工作表中添加一个几何形状。 返回一个 Shape 对象，该对象代表新图形。
@@ -85,13 +69,13 @@ items:
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
-  name: addGeometricShape(geometricShapeTypeString, left, top, width, height)
-  fullName: addGeometricShape(geometricShapeTypeString, left, top, width, height)
+  name: addGeometricShape(geometricShapeTypeString)
+  fullName: addGeometricShape(geometricShapeTypeString)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'addGeometricShape(geometricShapeTypeString: "LineInverse" | "Triangle" | "RightTriangle" | "Rectangle" | "Diamond" | "Parallelogram" | "Trapezoid" | "NonIsoscelesTrapezoid" | "Pentagon" | "Hexagon" | "Heptagon" | "Octagon" | "Decagon" | "Dodecagon" | "Star4" | "Star5" | "Star6" | "Star7" | "Star8" | "Star10" | "Star12" | "Star16" | "Star24" | "Star32" | "RoundRectangle" | "Round1Rectangle" | "Round2SameRectangle" | "Round2DiagonalRectangle" | "SnipRoundRectangle" | "Snip1Rectangle" | "Snip2SameRectangle" | "Snip2DiagonalRectangle" | "Plaque" | "Ellipse" | "Teardrop" | "HomePlate" | "Chevron" | "PieWedge" | "Pie" | "BlockArc" | "Donut" | "NoSmoking" | "RightArrow" | "LeftArrow" | "UpArrow" | "DownArrow" | "StripedRightArrow" | "NotchedRightArrow" | "BentUpArrow" | "LeftRightArrow" | "UpDownArrow" | "LeftUpArrow" | "LeftRightUpArrow" | "QuadArrow" | "LeftArrowCallout" | "RightArrowCallout" | "UpArrowCallout" | "DownArrowCallout" | "LeftRightArrowCallout" | "UpDownArrowCallout" | "QuadArrowCallout" | "BentArrow" | "UturnArrow" | "CircularArrow" | "LeftCircularArrow" | "LeftRightCircularArrow" | "CurvedRightArrow" | "CurvedLeftArrow" | "CurvedUpArrow" | "CurvedDownArrow" | "SwooshArrow" | "Cube" | "Can" | "LightningBolt" | "Heart" | "Sun" | "Moon" | "SmileyFace" | "IrregularSeal1" | "IrregularSeal2" | "FoldedCorner" | "Bevel" | "Frame" | "HalfFrame" | "Corner" | "DiagonalStripe" | "Chord" | "Arc" | "LeftBracket" | "RightBracket" | "LeftBrace" | "RightBrace" | "BracketPair" | "BracePair" | "Callout1" | "Callout2" | "Callout3" | "AccentCallout1" | "AccentCallout2" | "AccentCallout3" | "BorderCallout1" | "BorderCallout2" | "BorderCallout3" | "AccentBorderCallout1" | "AccentBorderCallout2" | "AccentBorderCallout3" | "WedgeRectCallout" | "WedgeRRectCallout" | "WedgeEllipseCallout" | "CloudCallout" | "Cloud" | "Ribbon" | "Ribbon2" | "EllipseRibbon" | "EllipseRibbon2" | "LeftRightRibbon" | "VerticalScroll" | "HorizontalScroll" | "Wave" | "DoubleWave" | "Plus" | "FlowChartProcess" | "FlowChartDecision" | "FlowChartInputOutput" | "FlowChartPredefinedProcess" | "FlowChartInternalStorage" | "FlowChartDocument" | "FlowChartMultidocument" | "FlowChartTerminator" | "FlowChartPreparation" | "FlowChartManualInput" | "FlowChartManualOperation" | "FlowChartConnector" | "FlowChartPunchedCard" | "FlowChartPunchedTape" | "FlowChartSummingJunction" | "FlowChartOr" | "FlowChartCollate" | "FlowChartSort" | "FlowChartExtract" | "FlowChartMerge" | "FlowChartOfflineStorage" | "FlowChartOnlineStorage" | "FlowChartMagneticTape" | "FlowChartMagneticDisk" | "FlowChartMagneticDrum" | "FlowChartDisplay" | "FlowChartDelay" | "FlowChartAlternateProcess" | "FlowChartOffpageConnector" | "ActionButtonBlank" | "ActionButtonHome" | "ActionButtonHelp" | "ActionButtonInformation" | "ActionButtonForwardNext" | "ActionButtonBackPrevious" | "ActionButtonEnd" | "ActionButtonBeginning" | "ActionButtonReturn" | "ActionButtonDocument" | "ActionButtonSound" | "ActionButtonMovie" | "Gear6" | "Gear9" | "Funnel" | "MathPlus" | "MathMinus" | "MathMultiply" | "MathDivide" | "MathEqual" | "MathNotEqual" | "CornerTabs" | "SquareTabs" | "PlaqueTabs" | "ChartX" | "ChartStar" | "ChartPlus", left: number, top: number, width: number, height: number): Excel.Shape;'
+    content: 'addGeometricShape(geometricShapeTypeString: "LineInverse" | "Triangle" | "RightTriangle" | "Rectangle" | "Diamond" | "Parallelogram" | "Trapezoid" | "NonIsoscelesTrapezoid" | "Pentagon" | "Hexagon" | "Heptagon" | "Octagon" | "Decagon" | "Dodecagon" | "Star4" | "Star5" | "Star6" | "Star7" | "Star8" | "Star10" | "Star12" | "Star16" | "Star24" | "Star32" | "RoundRectangle" | "Round1Rectangle" | "Round2SameRectangle" | "Round2DiagonalRectangle" | "SnipRoundRectangle" | "Snip1Rectangle" | "Snip2SameRectangle" | "Snip2DiagonalRectangle" | "Plaque" | "Ellipse" | "Teardrop" | "HomePlate" | "Chevron" | "PieWedge" | "Pie" | "BlockArc" | "Donut" | "NoSmoking" | "RightArrow" | "LeftArrow" | "UpArrow" | "DownArrow" | "StripedRightArrow" | "NotchedRightArrow" | "BentUpArrow" | "LeftRightArrow" | "UpDownArrow" | "LeftUpArrow" | "LeftRightUpArrow" | "QuadArrow" | "LeftArrowCallout" | "RightArrowCallout" | "UpArrowCallout" | "DownArrowCallout" | "LeftRightArrowCallout" | "UpDownArrowCallout" | "QuadArrowCallout" | "BentArrow" | "UturnArrow" | "CircularArrow" | "LeftCircularArrow" | "LeftRightCircularArrow" | "CurvedRightArrow" | "CurvedLeftArrow" | "CurvedUpArrow" | "CurvedDownArrow" | "SwooshArrow" | "Cube" | "Can" | "LightningBolt" | "Heart" | "Sun" | "Moon" | "SmileyFace" | "IrregularSeal1" | "IrregularSeal2" | "FoldedCorner" | "Bevel" | "Frame" | "HalfFrame" | "Corner" | "DiagonalStripe" | "Chord" | "Arc" | "LeftBracket" | "RightBracket" | "LeftBrace" | "RightBrace" | "BracketPair" | "BracePair" | "Callout1" | "Callout2" | "Callout3" | "AccentCallout1" | "AccentCallout2" | "AccentCallout3" | "BorderCallout1" | "BorderCallout2" | "BorderCallout3" | "AccentBorderCallout1" | "AccentBorderCallout2" | "AccentBorderCallout3" | "WedgeRectCallout" | "WedgeRRectCallout" | "WedgeEllipseCallout" | "CloudCallout" | "Cloud" | "Ribbon" | "Ribbon2" | "EllipseRibbon" | "EllipseRibbon2" | "LeftRightRibbon" | "VerticalScroll" | "HorizontalScroll" | "Wave" | "DoubleWave" | "Plus" | "FlowChartProcess" | "FlowChartDecision" | "FlowChartInputOutput" | "FlowChartPredefinedProcess" | "FlowChartInternalStorage" | "FlowChartDocument" | "FlowChartMultidocument" | "FlowChartTerminator" | "FlowChartPreparation" | "FlowChartManualInput" | "FlowChartManualOperation" | "FlowChartConnector" | "FlowChartPunchedCard" | "FlowChartPunchedTape" | "FlowChartSummingJunction" | "FlowChartOr" | "FlowChartCollate" | "FlowChartSort" | "FlowChartExtract" | "FlowChartMerge" | "FlowChartOfflineStorage" | "FlowChartOnlineStorage" | "FlowChartMagneticTape" | "FlowChartMagneticDisk" | "FlowChartMagneticDrum" | "FlowChartDisplay" | "FlowChartDelay" | "FlowChartAlternateProcess" | "FlowChartOffpageConnector" | "ActionButtonBlank" | "ActionButtonHome" | "ActionButtonHelp" | "ActionButtonInformation" | "ActionButtonForwardNext" | "ActionButtonBackPrevious" | "ActionButtonEnd" | "ActionButtonBeginning" | "ActionButtonReturn" | "ActionButtonDocument" | "ActionButtonSound" | "ActionButtonMovie" | "Gear6" | "Gear9" | "Funnel" | "MathPlus" | "MathMinus" | "MathMultiply" | "MathDivide" | "MathEqual" | "MathNotEqual" | "CornerTabs" | "SquareTabs" | "PlaqueTabs" | "ChartX" | "ChartStar" | "ChartPlus"): Excel.Shape;'
     return:
       type:
       - excel.Excel.Shape
@@ -101,22 +85,6 @@ items:
       description: 表示形状的几何类型。 有关详细信息, 请参阅 GeometricShapeType。
       type:
       - "\"LineInverse\" | \"Triangle\" | \"RightTriangle\" | \"Rectangle\" | \"Diamond\" | \"Parallelogram\" | \"Trapezoid\" | \"NonIsoscelesTrapezoid\" | \"Pentagon\" | \"Hexagon\" | \"Heptagon\" | \"Octagon\" | \"Decagon\" | \"Dodecagon\" | \"Star4\" | \"Star5\" | \"Star6\" | \"Star7\" | \"Star8\" | \"Star10\" | \"Star12\" | \"Star16\" | \"Star24\" | \"Star32\" | \"RoundRectangle\" | \"Round1Rectangle\" | \"Round2SameRectangle\" | \"Round2DiagonalRectangle\" | \"SnipRoundRectangle\" | \"Snip1Rectangle\" | \"Snip2SameRectangle\" | \"Snip2DiagonalRectangle\" | \"Plaque\" | \"Ellipse\" | \"Teardrop\" | \"HomePlate\" | \"Chevron\" | \"PieWedge\" | \"Pie\" | \"BlockArc\" | \"Donut\" | \"NoSmoking\" | \"RightArrow\" | \"LeftArrow\" | \"UpArrow\" | \"DownArrow\" | \"StripedRightArrow\" | \"NotchedRightArrow\" | \"BentUpArrow\" | \"LeftRightArrow\" | \"UpDownArrow\" | \"LeftUpArrow\" | \"LeftRightUpArrow\" | \"QuadArrow\" | \"LeftArrowCallout\" | \"RightArrowCallout\" | \"UpArrowCallout\" | \"DownArrowCallout\" | \"LeftRightArrowCallout\" | \"UpDownArrowCallout\" | \"QuadArrowCallout\" | \"BentArrow\" | \"UturnArrow\" | \"CircularArrow\" | \"LeftCircularArrow\" | \"LeftRightCircularArrow\" | \"CurvedRightArrow\" | \"CurvedLeftArrow\" | \"CurvedUpArrow\" | \"CurvedDownArrow\" | \"SwooshArrow\" | \"Cube\" | \"Can\" | \"LightningBolt\" | \"Heart\" | \"Sun\" | \"Moon\" | \"SmileyFace\" | \"IrregularSeal1\" | \"IrregularSeal2\" | \"FoldedCorner\" | \"Bevel\" | \"Frame\" | \"HalfFrame\" | \"Corner\" | \"DiagonalStripe\" | \"Chord\" | \"Arc\" | \"LeftBracket\" | \"RightBracket\" | \"LeftBrace\" | \"RightBrace\" | \"BracketPair\" | \"BracePair\" | \"Callout1\" | \"Callout2\" | \"Callout3\" | \"AccentCallout1\" | \"AccentCallout2\" | \"AccentCallout3\" | \"BorderCallout1\" | \"BorderCallout2\" | \"BorderCallout3\" | \"AccentBorderCallout1\" | \"AccentBorderCallout2\" | \"AccentBorderCallout3\" | \"WedgeRectCallout\" | \"WedgeRRectCallout\" | \"WedgeEllipseCallout\" | \"CloudCallout\" | \"Cloud\" | \"Ribbon\" | \"Ribbon2\" | \"EllipseRibbon\" | \"EllipseRibbon2\" | \"LeftRightRibbon\" | \"VerticalScroll\" | \"HorizontalScroll\" | \"Wave\" | \"DoubleWave\" | \"Plus\" | \"FlowChartProcess\" | \"FlowChartDecision\" | \"FlowChartInputOutput\" | \"FlowChartPredefinedProcess\" | \"FlowChartInternalStorage\" | \"FlowChartDocument\" | \"FlowChartMultidocument\" | \"FlowChartTerminator\" | \"FlowChartPreparation\" | \"FlowChartManualInput\" | \"FlowChartManualOperation\" | \"FlowChartConnector\" | \"FlowChartPunchedCard\" | \"FlowChartPunchedTape\" | \"FlowChartSummingJunction\" | \"FlowChartOr\" | \"FlowChartCollate\" | \"FlowChartSort\" | \"FlowChartExtract\" | \"FlowChartMerge\" | \"FlowChartOfflineStorage\" | \"FlowChartOnlineStorage\" | \"FlowChartMagneticTape\" | \"FlowChartMagneticDisk\" | \"FlowChartMagneticDrum\" | \"FlowChartDisplay\" | \"FlowChartDelay\" | \"FlowChartAlternateProcess\" | \"FlowChartOffpageConnector\" | \"ActionButtonBlank\" | \"ActionButtonHome\" | \"ActionButtonHelp\" | \"ActionButtonInformation\" | \"ActionButtonForwardNext\" | \"ActionButtonBackPrevious\" | \"ActionButtonEnd\" | \"ActionButtonBeginning\" | \"ActionButtonReturn\" | \"ActionButtonDocument\" | \"ActionButtonSound\" | \"ActionButtonMovie\" | \"Gear6\" | \"Gear9\" | \"Funnel\" | \"MathPlus\" | \"MathMinus\" | \"MathMultiply\" | \"MathDivide\" | \"MathEqual\" | \"MathNotEqual\" | \"CornerTabs\" | \"SquareTabs\" | \"PlaqueTabs\" | \"ChartX\" | \"ChartStar\" | \"ChartPlus\""
-    - id: left
-      description: 从形状左侧到工作表左侧的距离 (以磅为单位)。
-      type:
-      - number
-    - id: top
-      description: 从形状的上边缘到工作表的顶端之间的距离 (以磅为单位)。
-      type:
-      - number
-    - id: width
-      description: 形状的宽度 (以磅为单位)。
-      type:
-      - number
-    - id: height
-      description: 形状的高度 (以磅为单位)。
-      type:
-      - number
 - uid: excel.Excel.ShapeCollection.addGroup
   summary: >-
     将工作表中的一部分形状组合在一起。 返回一个 Shape 对象, 该对象代表新的形状组。
@@ -157,7 +125,7 @@ items:
     return:
       type:
       - excel.Excel.Shape
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nconst myFile = <HTMLInputElement>document.getElementById(\"selectedFile\");\nconst reader = new FileReader();\n\nreader.onload = (event) => {\n    Excel.run((context) => {\n        const startIndex = (<string>(<FileReader>event.target).result).indexOf(\"base64,\");\n        const mybase64 = (<string>(<FileReader>event.target).result).substr(startIndex + 7);\n        const sheet = context.workbook.worksheets.getItem(\"Shapes\");\n        const image = sheet.shapes.addImage(mybase64);\n        image.name = \"Image\";\n        return context.sync();\n    });\n};\n\n// Read in the image file as a data URL.\nreader.readAsDataURL(myFile.files[0]);\n```"
     parameters:
     - id: base64ImageString
       description: 以 JPEG 或 PNG 格式的 base64 编码的图像。
