--- a/docs/docs-ref-autogen/excel/excel.textframe.yml
+++ b/docs/docs-ref-autogen/excel/excel.textframe.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2c0ca68117dd43fb680208582e2f72ea533a7ebe
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 8dbe3e26221352b0032db0c081e1057a7cae834a
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111661"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303030"
 items:
 - uid: excel.Excel.TextFrame
   summary: >-
@@ -343,6 +343,11 @@ items:
       type:
       - excel.Excel.TextFrame
 - uid: excel.Excel.TextFrame.textRange
+  summary: >-
+    代表文本框架中的文本范围。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   isPreview: true
   name: textRange
   fullName: textRange
