--- a/docs/docs-ref-autogen/outlook/office.item.yml
+++ b/docs/docs-ref-autogen/outlook/office.item.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d3cfe2eb385416fe5c54da6581aa48bbe5af5d12
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 04dba8c3e687e14c314ee744e4a0f4cd3c467f2c
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198667"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303289"
 items:
 - uid: outlook.Office.Item
   summary: >-
@@ -40,7 +40,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在预览`Office.EventType.AttachmentsChanged`中也受支持。
+    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -78,7 +78,7 @@ items:
     添加支持事件的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在预览`Office.EventType.AttachmentsChanged`中也受支持。
+    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -472,7 +472,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在预览`Office.EventType.AttachmentsChanged`中也受支持。
+    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -506,7 +506,7 @@ items:
     删除受支持事件类型的事件处理程序。
 
 
-    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在预览`Office.EventType.AttachmentsChanged`中也受支持。
+    目前, 受支持的事件`Office.EventType.AppointmentTimeChanged` <!-- -->类型`Office.EventType.RecipientsChanged` <!-- -->为、 `Office.EventType.RecurrenceChanged` <!-- -->和。 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
 
     \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
