--- a/docs/docs-ref-autogen/toc.yml
+++ b/docs/docs-ref-autogen/toc.yml
@@ -38,6 +38,12 @@ items:
                 items:
                   - name: AggregationFunction
                     uid: excel.Excel.AggregationFunction
+                  - name: ArrowHeadLength
+                    uid: excel.Excel.ArrowHeadLength
+                  - name: ArrowHeadStyle
+                    uid: excel.Excel.ArrowHeadStyle
+                  - name: ArrowHeadWidth
+                    uid: excel.Excel.ArrowHeadWidth
                   - name: AutoFillType
                     uid: excel.Excel.AutoFillType
                   - name: BindingType
@@ -250,6 +256,8 @@ items:
                     uid: excel.Excel.RangeValueType
                   - name: ReadingOrder
                     uid: excel.Excel.ReadingOrder
+                  - name: RibbonTab
+                    uid: excel.Excel.RibbonTab
                   - name: SaveBehavior
                     uid: excel.Excel.SaveBehavior
                   - name: SearchDirection
@@ -338,6 +346,8 @@ items:
                 uid: excel.Excel.CellPropertiesProtection
               - name: CellValueConditionalFormat
                 uid: excel.Excel.CellValueConditionalFormat
+              - name: ChangedEventDetail
+                uid: excel.Excel.ChangedEventDetail
               - name: 图表
                 uid: excel.Excel.Chart
               - name: ChartAreaFormat
@@ -1294,7 +1304,7 @@ items:
                 uid: outlook.Office.AttachmentDetails
               - name: Body
                 uid: outlook.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: outlook.Office.Contact
               - name: CustomProperties
                 uid: outlook.Office.CustomProperties
@@ -1399,7 +1409,7 @@ items:
                 uid: Outlook_1_7.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_7.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_7.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_7.Office.CustomProperties
@@ -1484,7 +1494,7 @@ items:
                 uid: Outlook_1_6.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_6.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_6.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_6.Office.CustomProperties
@@ -1557,7 +1567,7 @@ items:
                 uid: Outlook_1_5.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_5.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_5.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_5.Office.CustomProperties
@@ -1630,7 +1640,7 @@ items:
                 uid: Outlook_1_4.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_4.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_4.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_4.Office.CustomProperties
@@ -1703,7 +1713,7 @@ items:
                 uid: Outlook_1_3.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_3.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_3.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_3.Office.CustomProperties
@@ -1772,7 +1782,7 @@ items:
                 uid: Outlook_1_2.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_2.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_2.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_2.Office.CustomProperties
@@ -1837,7 +1847,7 @@ items:
                 uid: Outlook_1_1.Office.AttachmentDetails
               - name: Body
                 uid: Outlook_1_1.Office.Body
-              - name: Contact
+              - name: 联系人
                 uid: Outlook_1_1.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_1.Office.CustomProperties
@@ -2027,7 +2037,7 @@ items:
             uid: word.Word.InlinePicture
           - name: InlinePictureCollection
             uid: word.Word.InlinePictureCollection
-          - name: 列表
+          - name: 列出
             uid: word.Word.List
           - name: ListCollection
             uid: word.Word.ListCollection
