--- a/docs/docs-ref-autogen/excel/excel.interfaces.groupshapecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.groupshapecollectionloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 061abed1da20106062528293d581b6372605d02d
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a1db16687c7ce5b035a064c1fc686a89b4475a1b
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112151"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303086"
 items:
 - uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions
   summary: >-
@@ -23,6 +23,7 @@ items:
   - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.$all
   - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.altTextDescription
   - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.altTextTitle
+  - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.connectionSiteCount
   - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.fill
   - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.geometricShape
   - excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.geometricShapeType
@@ -88,6 +89,23 @@ items:
   type: property
   syntax:
     content: 'altTextTitle?: boolean;'
+    return:
+      type:
+      - boolean
+- uid: excel.Excel.Interfaces.GroupShapeCollectionLoadOptions.connectionSiteCount
+  summary: >-
+    对于集合中的每一项: 返回指定形状上的连接结点的数目。 只读。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: connectionSiteCount
+  fullName: connectionSiteCount
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'connectionSiteCount?: boolean;'
     return:
       type:
       - boolean
