--- a/docs/docs-ref-autogen/excel/excel.interfaces.lineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.lineupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2a154f63115dcb91976538421a136ae47ee8bae6
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 79d01ec03eebffe59e5b6d61fc829c329aa4d82b
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116008"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303058"
 items:
 - uid: excel.Excel.Interfaces.LineUpdateData
   summary: 用于更新 line 对象上的数据的接口, 可用于 "line. set (<!-- -->{...}"<!-- -->)".
@@ -15,7 +15,64 @@ items:
   type: interface
   package: excel
   children:
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadLength
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadStyle
+  - excel.Excel.Interfaces.LineUpdateData.beginArrowHeadWidth
   - excel.Excel.Interfaces.LineUpdateData.connectorType
+  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadLength
+  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadStyle
+  - excel.Excel.Interfaces.LineUpdateData.endArrowHeadWidth
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadLength
+  summary: >-
+    表示指定线条开头的箭头的长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadLength
+  fullName: beginArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadStyle
+  summary: >-
+    表示指定线条开头的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadStyle
+  fullName: beginArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineUpdateData.beginArrowHeadWidth
+  summary: >-
+    表示指定线条的起点的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: beginArrowHeadWidth
+  fullName: beginArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'beginArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
 - uid: excel.Excel.Interfaces.LineUpdateData.connectorType
   summary: >-
     表示线条的连接线类型。
@@ -33,3 +90,54 @@ items:
     return:
       type:
       - Excel.ConnectorType | "Straight" | "Elbow" | "Curve"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadLength
+  summary: >-
+    表示指定线条末端的箭头长度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadLength
+  fullName: endArrowHeadLength
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadLength?: Excel.ArrowHeadLength | "Short" | "Medium" | "Long";'
+    return:
+      type:
+      - Excel.ArrowHeadLength | "Short" | "Medium" | "Long"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadStyle
+  summary: >-
+    表示指定线条末端的箭头样式。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadStyle
+  fullName: endArrowHeadStyle
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadStyle?: Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+    return:
+      type:
+      - Excel.ArrowHeadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+- uid: excel.Excel.Interfaces.LineUpdateData.endArrowHeadWidth
+  summary: >-
+    表示指定线条末端的箭头宽度。
+
+
+    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  isPreview: true
+  name: endArrowHeadWidth
+  fullName: endArrowHeadWidth
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'endArrowHeadWidth?: Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide";'
+    return:
+      type:
+      - Excel.ArrowHeadWidth | "Narrow" | "Medium" | "Wide"
