--- a/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.sliceritemupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: abd3ac819f85f5088f53b6f7581b040d84100c64
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 42ffbc75e9f6f41d498da2352802fe2230a36a75
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107195"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30302918"
 items:
 - uid: excel.Excel.Interfaces.SlicerItemUpdateData
   summary: 用于更新 SlicerItem 对象上的数据的接口, 用于在 "SlicerItem" 中使用 (<!-- -->{...}<!-- -->)".
@@ -18,7 +18,7 @@ items:
   - excel.Excel.Interfaces.SlicerItemUpdateData.isSelected
 - uid: excel.Excel.Interfaces.SlicerItemUpdateData.isSelected
   summary: >-
-    如果选择了切片器项, 则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。
+    如果选择了切片器项, 则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。 默认情况下, 如果仅选择了切片器项目, 则取消选择该项目时, 将会选择所有项目。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
