--- a/docs/docs-ref-autogen/office/office.eventtype.yml
+++ b/docs/docs-ref-autogen/office/office.eventtype.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1d3b44df52a164a9120c0b14f96967bb999a254b
-ms.sourcegitcommit: b0b614f5315ab2e5c1e0ea51c687498f87684a07
+ms.openlocfilehash: bac9152fdd5b7c3155a5453ffecac732420c2f71
+ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "30055925"
+ms.lasthandoff: 02/27/2019
+ms.locfileid: "30303254"
 items:
 - uid: office.Office.EventType
   summary: >-
@@ -41,6 +41,7 @@ items:
   - office.Office.EventType.DialogEventReceived
   - office.Office.EventType.DialogMessageReceived
   - office.Office.EventType.DocumentSelectionChanged
+  - office.Office.EventType.EnhancedLocationsChanged
   - office.Office.EventType.ItemChanged
   - office.Office.EventType.NodeDeleted
   - office.Office.EventType.NodeInserted
@@ -162,6 +163,17 @@ items:
     *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Excel</strong></td><td> </td><td> Y </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> </td></tr> </table>
   name: DocumentSelectionChanged
   fullName: DocumentSelectionChanged
+  langs:
+  - typeScript
+  type: field
+- uid: office.Office.EventType.EnhancedLocationsChanged
+  summary: >-
+    在 Outlook 中更改约会位置时触发。
+
+
+    \[[API 集: 邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
+  name: EnhancedLocationsChanged
+  fullName: EnhancedLocationsChanged
   langs:
   - typeScript
   type: field
